@@ -7,13 +7,18 @@ import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.boot.test.autoconfigure.orm.jpa.TestEntityManager;
 import org.springframework.context.annotation.Import;
 import ru.otus.hw.dto.BookDto;
+import ru.otus.hw.dto.CommentDto;
 import ru.otus.hw.dto.converters.AuthorDtoConverter;
 import ru.otus.hw.dto.converters.BookDtoConverter;
+import ru.otus.hw.dto.converters.CommentDtoConverter;
 import ru.otus.hw.dto.converters.GenreDtoConverter;
 import ru.otus.hw.models.Author;
 import ru.otus.hw.models.Book;
+import ru.otus.hw.models.Comment;
 import ru.otus.hw.models.Genre;
 
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -21,7 +26,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @DisplayName("Репозиторий на основе Jpa для работы с книгами ")
 @DataJpaTest
-@Import({JpaBookRepository.class, BookDtoConverter.class, AuthorDtoConverter.class, GenreDtoConverter.class})
+@Import({
+        JpaBookRepository.class, BookDtoConverter.class,AuthorDtoConverter.class, GenreDtoConverter.class,
+        CommentDtoConverter.class
+})
 class JpaBookRepositoryTest {
 
     @Autowired
@@ -58,7 +66,8 @@ class JpaBookRepositoryTest {
         Author author = em.find(Author.class, 2);
         Genre genre4 = em.find(Genre.class, 4);
         Genre genre5 = em.find(Genre.class, 5);
-        var expectedBook = converter.toDto(new Book(0L, "Title4", author, List.of(genre4, genre5)));
+        var expectedBook = converter.toDto(
+                new Book(0L, "Title4", author, List.of(genre4, genre5), Collections.emptyList()));
 
         var returnedBook = JpaBookrepository.save(expectedBook);
         assertThat(returnedBook).isNotNull()
@@ -77,7 +86,9 @@ class JpaBookRepositoryTest {
         Author author = em.find(Author.class, 2);
         Genre genre4 = em.find(Genre.class, 4);
         Genre genre5 = em.find(Genre.class, 5);
-        var expectedBook = converter.toDto(new Book(1L, "BookTitle_10500", author, List.of(genre4, genre5)));
+        Comment comment = new Comment(0L, "text1");
+        var expectedBook = converter.toDto(
+                new Book(1L, "BookTitle_10500", author, List.of(genre4, genre5), List.of(comment)));
 
         assertThat(JpaBookrepository.findById(expectedBook.getId()))
                 .isPresent()
@@ -87,7 +98,10 @@ class JpaBookRepositoryTest {
         var returnedBook = JpaBookrepository.save(expectedBook);
         assertThat(returnedBook).isNotNull()
                 .matches(book -> book.getId() > 0)
-                .usingRecursiveComparison().ignoringExpectedNullFields().isEqualTo(expectedBook);
+                .matches(book -> book.getComments().get(0).getId() > 0)
+                .usingRecursiveComparison()
+                .withComparatorForType(Comparator.comparing(CommentDto::getText), CommentDto.class)
+                .ignoringExpectedNullFields().isEqualTo(expectedBook);
 
         assertThat(JpaBookrepository.findById(returnedBook.getId()))
                 .isPresent()
